# soc_in_a_box

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: detections.yaml  schema.yaml  sources.yaml
data/samples/: sample_events.jsonl
reports/cases/: CASE-0001_suspicious_process_access_2020-09-20T161703.996000+0000.md
src/socbox/: __init__.py  __main__.py
src/socbox/detect/: engine.py  rules.py
src/socbox/ingest/: __init__.py  download.py  normalize.py  normalize_cli.py  parse_mordor.py
src/socbox/report/: render.py  triage.py
tests/: test_engine.py  test_normalize.py  test_rules.py
